--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>Nirdeshika</title>
 
 	<link rel="stylesheet" href="/global.css">
 	<link rel='icon' type='image/png' href='/logom.png'>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
-	<script defer type="module" src='../smv/src/main.js'></script>
+	<script defer type="module" src='/src/main.js'></script>
 </head>
 
 <body>
