--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<link rel="stylesheet" href="/global.css">
 	<link rel='icon' type='image/png' href='/logom.png'>
+	<link rel="stylesheet" href="/static/css/all.min.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
 	<script defer type="module" src='/src/main.js'></script>
